<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/com.acv.meetmarket"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ebebeb"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/layout_main_onscroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/dimen_15dp" >

        <org.com.atmarkcafe.sky.customviews.charting.MTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:gravity="center"
            android:text="@string/text_15"
            android:textColor="@android:color/black"
            android:textSize="@dimen/dimen_15dp"
            android:textStyle="bold"
            custom:txtFont="bold" />

        <org.com.atmarkcafe.sky.customviews.charting.MTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_16"
            android:textColor="#757575"
            android:textSize="@dimen/dimen_11dp"
            android:textStyle="normal"
            custom:txtFont="light" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_40dp"
            android:layout_marginTop="@dimen/dimen_3dp"
            android:background="@android:color/white"
            android:paddingLeft="@dimen/dimen_5dp"
            android:paddingRight="@dimen/dimen_5dp" >

            <org.com.atmarkcafe.sky.customviews.charting.MTextView
                android:id="@+id/createmeeting_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|left"
                android:text="@string/text_16"
                android:textColor="#d6402b"
                android:textSize="@dimen/dimen_16dp"
                android:textStyle="bold"
                custom:txtFont="bold" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="@dimen/dimen_14dp"
                android:layout_height="@dimen/dimen_9dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/mm_createmeeting_icon_dropdown" />

        </RelativeLayout>

        <org.com.atmarkcafe.sky.customviews.charting.MTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:text="@string/text_17"
            android:textColor="#757575"
            android:textSize="@dimen/dimen_11dp"
            android:textStyle="normal"
            custom:txtFont="light" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RelativeLayout
                android:layout_width="@dimen/dimen_120dp"
                android:layout_height="@dimen/dimen_40dp"
                android:layout_marginTop="@dimen/dimen_3dp"
                android:background="@android:color/white"
                android:paddingLeft="@dimen/dimen_5dp"
                android:paddingRight="@dimen/dimen_5dp" >

                <org.com.atmarkcafe.sky.customviews.charting.MTextView
                    android:id="@+id/createmeeting_date_start"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|left"
                    android:text="@string/text_16"
                    android:textColor="#d6402b"
                    android:textSize="@dimen/dimen_16dp"
                    android:textStyle="bold"
                    custom:txtFont="bold" />

                <ImageView
                    android:layout_width="@dimen/dimen_14dp"
                    android:layout_height="@dimen/dimen_9dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/mm_createmeeting_icon_dropdown" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="@dimen/dimen_120dp"
                android:layout_height="@dimen/dimen_40dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/dimen_3dp"
                android:background="@android:color/white"
                android:paddingLeft="@dimen/dimen_5dp"
                android:paddingRight="@dimen/dimen_5dp" >

                <org.com.atmarkcafe.sky.customviews.charting.MTextView
                    android:id="@+id/createmeeting_date_to"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|left"
                    android:text="@string/text_16"
                    android:textColor="#d6402b"
                    android:textSize="@dimen/dimen_16dp"
                    android:textStyle="bold"
                    custom:txtFont="bold" />

                <ImageView
                    android:layout_width="@dimen/dimen_14dp"
                    android:layout_height="@dimen/dimen_9dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/mm_createmeeting_icon_dropdown" />
            </RelativeLayout>

            <org.com.atmarkcafe.sky.customviews.charting.MTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/text_18"
                android:textColor="#757575"
                android:textSize="@dimen/dimen_11dp"
                android:textStyle="normal"
                custom:txtFont="light" />
        </RelativeLayout>

        <org.com.atmarkcafe.sky.customviews.charting.MTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:text="@string/text_19"
            android:textColor="#757575"
            android:textSize="@dimen/dimen_11dp"
            android:textStyle="normal"
            custom:txtFont="light" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_40dp"
            android:layout_marginTop="@dimen/dimen_3dp"
            android:background="@android:color/white"
            android:paddingLeft="@dimen/dimen_5dp"
            android:paddingRight="@dimen/dimen_5dp" >

            <org.com.atmarkcafe.sky.customviews.charting.MTextView
                android:id="@+id/createmeeting_location"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/imageView2"
                android:gravity="center|left"
                android:paddingLeft="@dimen/dimen_35dp"
                android:paddingRight="@dimen/dimen_0dp"
                android:text="@string/text_16"
                android:textColor="#d6402b"
                android:textSize="@dimen/dimen_16dp"
                android:textStyle="bold"
                custom:txtFont="bold" />

            <ImageView
                android:layout_width="@dimen/dimen_19dp"
                android:layout_height="@dimen/dimen_29dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="@drawable/mm_createmeeting_icon_pin" />

            <ImageView
                android:layout_width="@dimen/dimen_14dp"
                android:layout_height="@dimen/dimen_9dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/mm_createmeeting_icon_dropdown" />
        </RelativeLayout>

        <RadioGroup
            android:id="@+id/createmeetting_group"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_15dp"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio0"
                android:layout_width="@dimen/dimen_61dp"
                android:layout_height="@dimen/dimen_61dp"
                android:background="@drawable/createmeeting_1"
                android:button="@drawable/tranfer"
                android:checked="true" />

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="@dimen/dimen_61dp"
                android:layout_height="@dimen/dimen_61dp"
                android:layout_marginLeft="@dimen/dimen_20dp"
                android:layout_marginRight="@dimen/dimen_20dp"
                android:background="@drawable/createmeeting_2"
                android:button="@drawable/tranfer" />

            <RadioButton
                android:id="@+id/radio2"
                android:layout_width="@dimen/dimen_61dp"
                android:layout_height="@dimen/dimen_61dp"
                android:background="@drawable/createmeeting_3"
                android:button="@drawable/tranfer" />
        </RadioGroup>

        <org.com.atmarkcafe.sky.customviews.charting.MTextView
            android:id="@+id/createmeeting_send_invite"
            android:layout_width="@dimen/dimen_292dp"
            android:layout_height="@dimen/dimen_65dp"
            android:background="@drawable/mm_dashboard_meeting_card"
            android:gravity="center"
            android:text="@string/text_20"
            android:textColor="#d6402b"
            android:textSize="@dimen/dimen_15dp"
            android:textStyle="bold"
            custom:txtFont="bold" />

        <org.com.atmarkcafe.sky.customviews.charting.MTextView
            android:id="@+id/createnewmeeting_cancel"
            android:layout_width="@dimen/dimen_292dp"
            android:layout_height="@dimen/dimen_48dp"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:background="@drawable/mm_dashboard_meeting_card"
            android:gravity="center"
            android:text="@string/text_21"
            android:textColor="@android:color/black"
            android:textSize="@dimen/dimen_15dp"
            android:textStyle="bold"
            custom:txtFont="bold" />

    </LinearLayout>

</ScrollView>